# BiDexHand

./: .gitignore  BOM.md  README.md
cad_asset/_stl/: PALM, BASE.STL  PALM, COUPLER.STL  PALM, PTFE GUARD.STL  PHALANX, DISTAL.STL  PHALANX, MCP BASE.STL  PHALANX, MCP.STL  PHALANX, MIDDLE.STL  PHALANX, PROXIMAL COVER.STL  PHALANX, PROXIMAL.STL  PHALANX, SUPPORT - L.STL  PHALANX, SUPPORT - R.STL  PULLEY, SERVO 3.7G.STL  PULLEY, SERVO 9G.STL  SERVO RACK BOT BACK - 1.STL  SERVO RACK BOT FRONT - 1.STL  SERVO RACK BOT FRONT - 4.STL  SERVO RACK BOT REAR - 4.STL  SERVO RACK TOP FRONT - 1.STL  SERVO RACK TOP FRONT - 4.STL  SERVO RACK TOP REAR - 1.STL  SLEEVE BASE, FRANKA.STL  THUMB, CMC BASE.STL  THUMB, CMC BRIDGE.STL  THUMB, CMC LINKAGE.STL  THUMB, CMC SERVO LINKAGE.STL  THUMB, IP DISTAL.STL  THUMB, IP MIDDLE.STL  THUMB, IP SUPPORT - L.STL  THUMB, IP SUPPORT - R.STL  THUMB, MCP BASE.STL  THUMB, MCP LINKAGE COVER.STL  THUMB, MCP LINKAGE.STL
scripts/ESP32_multi_servo_feather/: ESP32_multi_servo_feather.ino
src/combined_fer_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/combined_fer_moveit_config/config/: fer_real_controllers.yaml  moveit.rviz  ros2_controllers.yaml
src/combined_fer_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  real.launch.py  rsp.launch.py  spawn_controllers.launch.py
src/combined_fer_moveit_config/srdf/: combined_arm.srdf.xacro  combined_arm.xacro
src/hand_motion_shadowing/: package.xml  setup.py
src/hand_motion_shadowing/config/: v2quest.yaml  v3quest.yaml
src/hand_motion_shadowing/hand_motion_shadowing/: hand_shadowing_node.py
src/hand_motion_shadowing/launch/: shadowing.launch.xml
src/hand_rviz/: package.xml  setup.cfg  setup.py
src/hand_rviz/config/: combined.rviz  urdf.rviz  wrist_cam.rviz
src/hand_rviz/hand_rviz/: joint_state_forwarding_node.py  joint_state_fusion_node.py
src/hand_rviz/launch/: combined_moveit.launch.py  combined_rviz.launch.py  hand_rviz.launch.py
src/hand_rviz/urdf/: combined_description.xacro  hand_urdf.csv  hand_urdf.urdf  hand_urdf_cf.urdf
src/hand_rviz/urdf/meshes/: hand_base_link.STL  i_tip_link.STL  idf_link.STL  ima_link.STL  imf_link.STL  ipf_link.STL  m_tip_link.STL  mdf_link.STL  mma_link.STL  mmf_link.STL  mpf_link.STL  p_tip_link.STL  pdf_link.STL  pma_link.STL  pmf_link.STL  ppf_link.STL  r_tip_link.STL  rdf_link.STL  rma_link.STL  rmf_link.STL  rpf_link.STL  t_tip_link.STL  tca_link.STL  tcf_link.STL  tdf_link.STL  tma_link.STL  tmf_link.STL
src/hand_servo_control/: package.xml  setup.py
src/hand_servo_control/hand_servo_control/: demo_motion_node.py  servo_control_gui.py
src/hand_servo_control/launch/: demo.launch.xml  multi_servo.launch.xml
src/hand_servo_interfaces/: package.xml
src/hand_vision/: package.xml  setup.py
src/hand_vision/hand_vision/: wrist_camera_node.py  yolo_node.py
src/hand_vision/launch/: wrist_cam.launch.xml
