<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_servo_control</name>
  <version>0.1.0</version>
  <description>Servo control ROS2 node for Bidex Hand</description>
  <maintainer email="wengmister@gmail.com">Zhengyang Kris Weng</maintainer>
  <license>MIT</license>

  <!-- ROS dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>hand_servo_interfaces</depend>

  <!-- Non-ROS dependency -->
  <exec_depend>pyserial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
